test_suite/tests/ui/fail/invalid_attr_value_for_arg/invalid_arg_values.rs
use clapi::macros::*;

#[command]
#[arg(x, values="1", "2", "3")]
fn app(x: Vec<i64>){}

fn main(){}