test_suite/tests/ui/fail/invalid_attr_value_for_arg/invalid_arg_values.stderr
error: custom attribute panicked
 --> $DIR/invalid_arg_values.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: expected integer values for `x : Vec<i64>` but was ["1", "2", "3"]
